# CourseWorkFinal

./: .gitignore  CMakeLists.txt  README.txt  company.cpp  company.h  employee.cpp  employee.h  employees.h  event.cpp  event.h  hodgins_journal.txt  main  main.cpp
src/: main.cpp
src/core/: company.cpp  company.h  simulation_time.h
src/employees/: auto_memory_doll.cpp  auto_memory_doll.h  boss.cpp  boss.h  employee.cpp  employee.h  mail_man.cpp  mail_man.h  role.cpp  role.h
src/events/: event.cpp  event.h  event_types.h
src/statistics/: statistic.cpp  statistic.h
